--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: CH Blog
 SEOTitle: 柴华的博客 | CH Blog
 header-img: img/post-bg-desk.jpg
 email: bula513@gmail.com
@@ -7,7 +7,7 @@ description: "Every failure is leading towards success."
 keyword: "CH, CH Blog, 柴华的博客, chaihua, 柴华, iOS, Apple, iPhone"
 url: "http://bula513.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/bula513/bula513.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
